--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   font_awesome_flutter: ^8.0.1
   cupertino_icons: ^0.1.2
   scoped_model: ^1.0.1
-  http: ^0.12.0+1
+  requests: ^1.0.0
   flutter_fluid_slider: ^0.0.1
   wave: ^0.0.8
   charts_flutter: ^0.6.0
