--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,3 +28,7 @@ flutter:
   
   assets:
     - assets/img/login_logo.png
+    - assets/img/nescafe.png
+    - assets/img/nescafe.jpg
+    - assets/img/4h.png
+    - assets/img/amul.jpeg
